Use brand colours and brand font

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -6,13 +6,14 @@
 
 /* Base Styles */
 
-html {
-    background: @brand-two;
-    color: @brand-one;
+html, body {
+    background: @brand-one;
+    color: @brand-two;
 }
 body {
-    background-color: @brand-one;
-    color: @brand-two;
+    border: 0.5rem solid @brand-three;
+    margin: 0.5rem;
+    padding:0.5rem;
 }
 a,
 a:visited {
