--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -6,12 +6,12 @@
 
 // Type
 
-@prose-stack:                   serif;
-@prose-webfont-stack:           @prose-stack;
+@prose-stack:                   GT Pressura Mono, serif;
+@prose-webfont-stack:           gt-pressura-mono, @prose-stack;
 @prose-leading:                 1.45;
 
-@title-stack:                   sans-serif;
-@title-webfont-stack:           @title-stack;
+@title-stack:                   GT Pressura Mono, sans-serif;
+@title-webfont-stack:           gt-pressura-mono, @title-stack;
 @title-leading:                 1.3;
 
 
@@ -20,8 +20,8 @@
 
 // Default
 @brand-one:     white;
-@brand-two:     black;
-@brand-three:   blue;
+@brand-two:     #121212;
+@brand-three:   #825C4E;
 @brand-four:    red;
 @brand-five:    green;
 
