--- a/templates/_layouts/html.liquid
+++ b/templates/_layouts/html.liquid
@@ -8,6 +8,7 @@
   
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="{{ site.baseurl | append: '/build/style.min.' | append: site.data.css_hashsum | append: '.css' }}" type="text/css" data-instant-track>
+  <link rel="stylesheet" href="{{ site.baseurl | append: '/img/fonts/gtpressuramono.css' }}" type="text/css" data-instant-track>
   <script src="{{ site.baseurl | append:'/js/libs/modernizr-custom.js' }}" data-no-instant data-instant-track></script>
   
   <!--
