Use query string based cachebusting in dev environment

--- a/templates/_layouts/html.liquid
+++ b/templates/_layouts/html.liquid
@@ -7,7 +7,11 @@
   <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.name }}</title>
   
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="{{ site.baseurl | append: '/build/style.min.' | append: site.data.css_hashsum | append: '.css' }}" type="text/css" data-instant-track>
+  {% if jekyll.environment == "production" %}
+    <link rel="stylesheet" href="{{ site.baseurl | append: '/build/style.min.' | append: site.data.css_hashsum | append: '.css' }}" type="text/css" data-instant-track>
+  {% else %}
+    <link rel="stylesheet" href="{{ site.baseurl | append: '/build/style.min.css?' | append: site.data.css_hashsum }}" type="text/css" data-instant-track>
+  {% endif %}
   <link rel="stylesheet" href="{{ site.baseurl | append: '/img/fonts/gtpressuramono.css' }}" type="text/css" data-instant-track>
   <script src="{{ site.baseurl | append:'/js/libs/modernizr-custom.js' }}" data-no-instant data-instant-track></script>
   
@@ -31,6 +35,10 @@
   <!--[if lte IE 8]>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" data-no-instant data-instant-track></script>
   <![endif]-->
-  <script src="{{ site.baseurl | append:'/build/app.min.' | append: site.data.js_hashsum | append: '.js' }}" data-no-instant data-instant-track></script>
+  {% if jekyll.environment == "production" %}
+    <script src="{{ site.baseurl | append:'/build/app.min.' | append: site.data.js_hashsum | append: '.js' }}" data-no-instant data-instant-track></script>
+  {% else %}
+    <script src="{{ site.baseurl | append:'/build/app.min.js?' | append: site.data.js_hashsum }}" data-no-instant data-instant-track></script>
+  {% endif %}
 </body>
 </html>
