--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -10,15 +10,14 @@ html, body {
     background: @brand-one;
     color: @brand-two;
 }
-body {
-    border: 0.5rem solid @brand-three;
-    margin: 0.5rem;
-    padding:0.5rem;
-}
 a,
 a:visited {
     color: @brand-three;
     text-decoration: underline;
+}
+a.silent {
+    color: inherit;
+    text-decoration: none;
 }
 
 
