--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -70,16 +70,16 @@ code {
 
 /*  Scale  */
 
-/* 1.414 */
-        .size-huge     { font-size: 3.998rem; }
-    h1, .size-xxlarge  { font-size: 2.827rem; }
-    h2, .size-xlarge   { font-size: 1.999rem; }
-    h3, .size-large    { font-size: 1.414rem; }
+/* 1.333 */
+        .size-huge     { font-size: 3.157rem; }
+        .size-xxlarge  { font-size: 2.369rem; }
+    h1, .size-xlarge   { font-size: 1.777rem; }
+    h2, .size-large    { font-size: 1.333rem; }
     body,.size-regular { font-size: 1.125rem; }
         .size-small    { font-size: 1rem; }
         .size-xsmall   { font-size: 0.75rem; }
     
-    html    { font-size: 16px;     line-height: @prose-leading; }
+    html    { font-size: 15px;     line-height: @prose-leading; }
 @media (min-width: @xs-min) {
     html    { font-size: 18px;     line-height: @prose-leading; }
 }
@@ -90,12 +90,12 @@ code {
     html    { font-size: 18px;     line-height: @prose-leading; }
     
     /* 1.5 */
-        .size-huge     { font-size: 5.063rem; }
-    h1, .size-xxlarge  { font-size: 3.375rem; }
-    h2, .size-xlarge   { font-size: 2.25rem; }
-    h3, .size-large    { font-size: 1.5rem; }
-    body,.size-regular { font-size: 1.125rem; }
-        .size-small    { font-size: 1rem; }
+    //     .size-huge     { font-size: 5.063rem; }
+    // h1, .size-xxlarge  { font-size: 3.375rem; }
+    // h2, .size-xlarge   { font-size: 2.25rem; }
+    // h3, .size-large    { font-size: 1.5rem; }
+    // body,.size-regular { font-size: 1.125rem; }
+    //     .size-small    { font-size: 1rem; }
         // .size-xsmall   { font-size: 0.667rem; }
 }
 @media (min-width: @xl-min) {
@@ -122,7 +122,7 @@ h1,
 h2,
 h3,
 dt {
-    margin: 2rem 0 1rem;
+    margin: 3rem 0 1rem;
 }
 ul,
 ol,
@@ -130,12 +130,23 @@ dl,
 blockquote,
 pre,
 figure,
-p { margin: 0 0 1.5rem; }
+p { margin: 0 0 3rem; }
 
 
 
 /* Styles */
 
+.title-one {
+    text-transform: uppercase;
+    font-weight: normal;
+    // border-bottom: 1px solid;
+    // padding-bottom: 0.5em;
+}
+.title-two {
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    font-weight: normal;
+}
 .prose {
     h1,
     h2,
