--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -8,11 +8,11 @@
 
 @prose-stack:                   GT Pressura Mono, serif;
 @prose-webfont-stack:           gt-pressura-mono, @prose-stack;
-@prose-leading:                 1.45;
+@prose-leading:                 1.5;
 
 @title-stack:                   GT Pressura Mono, sans-serif;
 @title-webfont-stack:           gt-pressura-mono, @title-stack;
-@title-leading:                 1.3;
+@title-leading:                 1;
 
 
 
@@ -23,7 +23,7 @@
 @brand-two:     #121212;
 @brand-three:   #825C4E;
 @brand-four:    red;
-@brand-five:    green;
+@brand-five:    #D7D7D7;
 
 
 
