--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -2,4 +2,9 @@
 layout: base
 ---
 
-Hello, World.
+<div class="wrapper">
+  <div class="container">
+    <h1>Hamon</h1>
+    <a href="{{ site.baseurl | append: '/work' }}">Work</a>
+  </div>
+</div>
