--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -14,6 +14,8 @@
 @title-webfont-stack:           gt-pressura-mono, @title-stack;
 @title-leading:                 1;
 
+@code-stack:                    GT Pressura Mono, monospace;
+@code-webfont-stack:            gt-pressura-mono, @code-stack;
 
 
 // Colours
@@ -24,6 +26,8 @@
 @brand-three:   #825C4E;
 @brand-four:    red;
 @brand-five:    #D7D7D7;
+
+@brand-five-light: lighten(@brand-five, 10%);
 
 
 
