--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -41,6 +41,7 @@ a.silent {
 .fill-brand-three {
     color: @brand-one;
     background-color: @brand-three;
+    a { color: inherit; }
 }
 .fill-brand-four {
     color: @brand-one;
