--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -5,8 +5,9 @@ layout: base
 <div class="wrapper">
   <div class="container">
     <h1>Hamon</h1>
-    <a href="{{ site.baseurl | append: '/work' }}">Work</a>
     
+    <a href="{{ site.baseurl | append: '/work' }}">Work</a>
+    <a href="{{ site.baseurl | append: '/about' }}">About</a>
     
     <dl>
       {% for collection in site.collections %}
