--- a/templates/about.liquid
+++ b/templates/about.liquid
@@ -17,7 +17,13 @@ about:
       
       Hamon draws on its experience in automation and infrastructure to
       build custom solutions that allow our clients to automate critical
-      parts of their infrastructure. 
+      parts of their infrastructure.
+      
+      #### Services
+      - Automation
+      - Web
+      - Infrastructure
+      - Python
   -
     title: How we work
     body: |
