Improve Work page to make it consistent with the rest of the site

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -47,6 +47,10 @@ hr    { clear: both; }
     }
 }
 
+.indent-one { padding-left: 2rem; }
+.indent-two { padding-left: 4rem; }
+
+
 
 @container-hpad-xxs: 1.5rem;
 .container-values() {
