--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -19,8 +19,6 @@
 
 
 // objects
-.indent-one { padding-left: 2rem; }
-.indent-two { padding-left: 4rem; }
 .bullet-list {
     &:extend(.indent-one);
     a {
@@ -30,7 +28,7 @@
 }
 
 .testimonial {
-    margin-left: 1.5rem;
+    // &:extend(.indent-one);
     blockquote,
     blockquote > p:last-child {
         margin-bottom: 0;
