--- a/templates/articles.liquid
+++ b/templates/articles.liquid
@@ -42,7 +42,7 @@ title: Articles & Guides
           {{ article.brief | markdownify }}
           <p class="collapse">
             <a class="silent" href="{{ link }}">
-              <time class="title-label size-xsmall">
+              <time class="title-fineprint size-xsmall">
                 {{ article.date | date: '%b %-d, %Y' }}
               </time>
             </a>
