--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -46,6 +46,12 @@ hr    { clear: both; }
         height:100% !important;
     }
 }
+.truncate {
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
 
 .indent-one { padding-left: 2rem; }
 .indent-two { padding-left: 4rem; }
