Increase spacing between in-page nav links for better click targets

--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -22,6 +22,8 @@
 .bullet-list {
     &:extend(.indent-one);
     a {
+        display: block;
+        padding: 0.25em 0;
         text-decoration: none;
         &:after { content: "→"; }
     }
