Add support for article author name and author link

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -55,6 +55,8 @@ hr    { clear: both; }
 
 .indent-one { padding-left: 2rem; }
 .indent-two { padding-left: 4rem; }
+.embed-spacer   { margin-bottom: 2rem; }
+.teaser-spacer  { margin-bottom: 5rem; }
 
 
 
