Add GT Sectra as a serif body font

--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -41,6 +41,7 @@
     }
     &:before {
         content: "“";
+        .title-type;
         position: absolute;
         font-size: 15rem;
         line-height: 0;
