--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -6,8 +6,8 @@
 
 // Type
 
-@prose-stack:                   GT Pressura Mono, serif;
-@prose-webfont-stack:           gt-pressura-mono, @prose-stack;
+@prose-stack:                   GT Sectra, serif;
+@prose-webfont-stack:           gt-sectra, @prose-stack;
 @prose-leading:                 1.5;
 
 @title-stack:                   GT Pressura Mono, sans-serif;
