--- a/templates/_layouts/html.liquid
+++ b/templates/_layouts/html.liquid
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ site.baseurl | append: '/build/style.min.css?' | append: site.data.css_hashsum }}" type="text/css" data-instant-track>
   {% endif %}
   <link rel="stylesheet" href="{{ site.baseurl | append: '/img/fonts/gtpressuramono.css' }}" type="text/css" data-instant-track>
+  <link rel="stylesheet" href="{{ site.baseurl | append: '/img/fonts/gtsectra.css' }}" type="text/css" data-instant-track>
   <script src="{{ site.baseurl | append:'/js/libs/modernizr-custom.js' }}" data-no-instant data-instant-track></script>
   
   <!--
