--- a/templates/about.liquid
+++ b/templates/about.liquid
@@ -92,7 +92,7 @@ team:
       {{ page.title }}
     </h2>
     
-    <ul class="bullet-list">
+    <ul class="title-type bullet-list">
       {% assign nav_items = page.about | push: page.team %}
       {% for section in nav_items %}
         <li>
