--- a/templates/_layouts/article.liquid
+++ b/templates/_layouts/article.liquid
@@ -10,7 +10,7 @@ layout: base
       <h1 class="size-xxlarge title-one">
         {{ page.title | smartify }}
       </h1>
-      <p class="indent-one">
+      <p class="indent-one title-type">
         {% if page.author %}
           {% if page.author.link %}
             <a href="{{ page.author.link }}">
