--- a/templates/_layouts/topic.liquid
+++ b/templates/_layouts/topic.liquid
@@ -11,7 +11,7 @@ layout: base
       {{ page.title }}
     </h2>
     
-    <div class="indent-one">
+    <div class="indent-one title-type">
       <p>
         Articles &amp; Guides published under
         the topic {{ page.title }}.
