--- a/templates/articles.liquid
+++ b/templates/articles.liquid
@@ -14,7 +14,7 @@ title: Articles & Guides
       {{ page.title }}
     </h2>
     
-    <ul class="bullet-list">
+    <ul class="bullet-list title-type">
       {% assign nav_items = site.topics %}
       {% for item in nav_items %}
         <li>
