--- a/templates/topics.liquid
+++ b/templates/topics.liquid
@@ -14,7 +14,7 @@ title: Topics
       {{ page.title }}
     </h2>
     
-    <ul class="bullet-list">
+    <ul class="bullet-list title-type">
       {% assign nav_items = site.topics %}
       {% for item in nav_items %}
         <li>
