--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -11,6 +11,7 @@ layout: base
     <dl>
       <dt><a href="{{ site.baseurl | append: '/about/' }}">About</a></dt>
       <dt><a href="{{ site.baseurl | append: '/work/' }}">Work</a></dt>
+      <dt><a href="{{ site.baseurl | append: '/lycaeum/' }}">The Lycӕum</a></dt>
       {% for collection in site.collections %}
         <dt>
           {% assign slug = collection.title | slugify %}
