--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -67,6 +67,7 @@ code {
 .dquo           { margin-left: -0.44em; }
 .tquo           { margin-left: -0.68em; }
 .no-underline   { text-decoration: none !important; display: inline-block; }
+.centered       { text-align: center; }
 
 
 
