--- a/templates/_layouts/article.liquid
+++ b/templates/_layouts/article.liquid
@@ -27,9 +27,9 @@ layout: base
     </div>
   </header>
   
-  <div class="container">
-    <div class="prose">
+  <section class="bleed">
+    <div class="container prose">
       {{ content }}
     </div>
-  </div>
+  </section>
 </article>
