Global header & nav, first pass

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -60,10 +60,9 @@ hr    { clear: both; }
 
 
 
-@container-hpad-xxs: 1.5rem;
 .container-values() {
     @vpads:         1.5rem, 2rem, 2rem;
-    @hpads:         @container-hpad-xxs, 4rem, 2rem;
+    @hpads:         1.5rem, 4rem, 2rem;
     @max-widths:    30rem, 52rem, 60rem;
     @breakpoints:   '',    @sm-min, @md-min;
 }
