--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -23,7 +23,7 @@
 // Default
 @brand-one:     white;
 @brand-two:     #121212;
-@brand-three:   #825C4E;
+@brand-three:   #825D4E;
 @brand-four:    red;
 @brand-five:    #D7D7D7;
 
