--- a/templates/lycaeum.liquid
+++ b/templates/lycaeum.liquid
@@ -56,17 +56,8 @@ topic: /topics/technology
   </div>
 </article>
 
-{% if page.topic %}
-{% assign topic = site.topics | where: 'id', page.topic | first %}
-{% if topic %}
-<section class="wrapper">
-  <div class="container">
-    <h3 class="size-xlarge title-four">
-      {{ topic.title }}
-      Guides
-    </h3>
-    {% include articles_listing_by_topic.liquid topic=topic %}
-  </div>
-</section>
-{% endif %}
-{% endif %}
+{%
+  include articles_listing_by_topic.liquid
+  topic_id=page.topic
+  title_append=' Guides'
+%}
