--- a/templates/_includes/articles_listing.liquid
+++ b/templates/_includes/articles_listing.liquid
@@ -1,29 +1,31 @@
 <ul>
   {% for article in include.articles reversed %}
     {% assign link = site.baseurl | append: article.url %}
-    <li class="teaser-spacer">
-      <h3 class="title-three">
-        <a href="{{ link }}">
-          {{ article.title | smartify }}
-        </a>
-      </h3>
-      <div class="indent-one prose">
-        {{ article.brief | markdownify }}
-        <p class="collapse">
-          {% if article.author %}
-            <i class="size-small">
-              by
-              {{ article.author.name }}
-            </i>
-            <br>
-          {% endif %}
-          <a class="silent" href="{{ link }}">
-            <time class="title-fineprint title-type size-xsmall">
-              {{ article.date | date: '%b %-d, %Y' }}
-            </time>
+    {% unless article.id == include.exclude_id %}
+      <li class="teaser-spacer">
+        <h3 class="title-three">
+          <a href="{{ link }}">
+            {{ article.title | smartify }}
           </a>
-        </p>
-      </div>
-    </li>
+        </h3>
+        <div class="indent-one prose">
+          {{ article.brief | markdownify }}
+          <p class="collapse">
+            {% if article.author %}
+              <i class="size-small">
+                by
+                {{ article.author.name }}
+              </i>
+              <br>
+            {% endif %}
+            <a class="silent" href="{{ link }}">
+              <time class="title-fineprint title-type size-xsmall">
+                {{ article.date | date: '%b %-d, %Y' }}
+              </time>
+            </a>
+          </p>
+        </div>
+      </li>
+    {% endunless %}
   {% endfor %}
 </ul>
