--- a/assets/css/objects.less
+++ b/assets/css/objects.less
@@ -32,6 +32,17 @@
         &:after { content: "→"; }
     }
 }
+.prose .links-list,
+.links-list {
+    padding-left: 0;
+    margin-top: -2.5rem;
+    li {
+        list-style-type: none;
+        display: inline;
+        margin-right: 0.5em;
+        &:before { display: none; }
+    }
+}
 
 .testimonial {
     blockquote,
